# meshchat

./: .gitignore  CLAUDE.md  Cargo.toml  HELP.md  Makefile  README.md  build.rs  jonesy.toml  settings.json
.github/workflows/: build_and_test.yml  checks.yml  jonesy.yml  release.yml  tag.yml
assets/fonts/: icons.toml
assets/images/: generate_icons.sh  icon.icns
assets/plist_exts/: Info.plist
src/: battery.rs  channel_id.rs  channel_message.rs  channel_view.rs  channel_view_entry.rs  comms.rs  config.rs  content.rs  conversation.rs  conversation_id.rs  device.rs  device_list.rs  device_list_view.rs  device_subscription.rs  device_view.rs  discovery.rs  easing.rs  emoji_picker.rs  icons.rs  linear.rs  main.rs  meshchat.rs  message.rs  notification.rs  styles.rs  test_helper.rs  timestamp.rs
src/meshc/: mod.rs  subscription.rs
src/mesht/: device_subscription.rs  mod.rs  subscription.rs
src/meshtastic/: device_subscription.rs  mod.rs
src/widgets/: battery.rs  easing.rs  emoji_picker.rs  linear.rs  mod.rs
wix/: main.wxs
