[package]
name = "meshchat"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/andrewdavidmackenzie/meshchat"

[dependencies]
meshtastic = { version = "0.1.7", git = "https://github.com/lukipuki/meshtastic-rust.git", branch = "ble-scan", features = ["bluetooth-le"] }
iced = { version = "0.13.1", features = ["tokio"] }
iced_futures = { version = "0.13", default-features = false }
anyhow = "1.0.100"
directories = "6.0.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
toml = "0.9.7"
smol = "2.0.2"
futures-lite = "2.6.1"
futures = "0.3.31"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
tokio = "1.47.1"
sorted-vec = "0.8.10"